---------------------------------------------------------------------------------------------------
Version: 2.3.2
Date: ????
  Changes:
    - Entering the Sandbox from a Remote View will later return you to that same view, instead of your character
  Bugfixes:
    - Remote Views won't be automatically closed for Gods or Editors, to prevent losing their inventories
---------------------------------------------------------------------------------------------------
Version: 2.3.1
Date: 2024-12-09
  Changes:
    - More Russian translations (thanks dodther)
  Bugfixes:
    - Potential fix for crashes related to invalid ghosts in Sandboxes
---------------------------------------------------------------------------------------------------
Version: 2.3.0
Date: 2024-12-02
  Changes:
    - New Scenario for an enhanced Sandbox/Editor-mode
    - Include the Turbo Loader in Sandbox items
    - Include the Heat Interface in Sandbox items
---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: 2024-12-01
  Changes:
    - Improved support for newly revived Sandbox Scenario
    - Temporary background scanning for auto-building, due to missing events
  Bugfixes:
    - Inventory management regression fixed for some cases involving volatile inventories
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2024-11-26
  Changes:
    - Auto-exiting of Remote View to enter the Sandbox is possible in more cases
  Bugfixes:
    - Teleportations using Remote View work properly
    - Better detections for entering/exiting Sandboxes
    - Decreased probability of losing the player's return character when exiting Sandboxes
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2024-11-23
  Changes:
    - Some Entities are available through a Selector that allows spawning them within an area